# GameEngine2D_SFML

./: CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.txt
core/: CMakeLists.txt
core/core/include/: Game.hpp
core/core/include/component/: ComponentBase.hpp
core/core/include/components/: Damage.hpp  Direction.hpp  ForceComponent.hpp  FormComponent.hpp  ParentRef.hpp  SpawnPosComponent.hpp
core/core/include/entity/: Entity.hpp
core/core/include/observer/: EventType.hpp  ObserverManager.hpp
core/core/include/parallax/: ParallaxObj.hpp
core/core/include/sound/: SoundBuffer.hpp  SoundBufferManager.hpp
core/core/include/sprite/: SpriteManager.hpp
core/core/include/system/: EntitySpawner.hpp  FormSystem.hpp  GravitySystem.hpp  KeyMovement.hpp
core/core/include/tools/: jsonTools.hpp
core/core/json/: README.md  SpriteSystem.json  scene1.json
core/core/json/entity/: Player.json  Protector.json
core/core/json/hud/: Button.json
core/core/src/: Game.cpp  assert.hpp
core/core/src/component/: ComponentManager.cpp
core/core/src/components/: Color.cpp  Damage.cpp  KeyMovement.cpp  LifeTime.cpp  (+1 more)
core/include/: AGame.hpp  Component.hpp  Components.hpp  Game.hpp  Imgui.hpp  Systems.hpp  Tools.hpp
core/include/behavior/: Behavior.hpp
core/include/component/: Component.hpp  ComponentBase.hpp  ComponentManager.hpp
core/include/components/: BehaviorComponent.hpp  Color.hpp  Damage.hpp  DiesLeavesScreen.hpp  Direction.hpp  DirectionSprite.hpp  ForceComponent.hpp  FormComponent.hpp  GravityComponent.hpp  HealthComponent.hpp  KeyMovement.hpp  LoopLife.hpp  MasseComponent.hpp  MouseForce.hpp  ParentRef.hpp  PosComponent.hpp  RectangleShape.hpp  RigideBody.hpp  Size.hpp  SolidBlock.hpp  SpawnPosComponent.hpp  Speed.hpp  Sprite.hpp  TargetEntity.hpp
core/include/entity/: Entity.hpp
core/include/factory/: EntityFactory.hpp  ParticleFactory.hpp  PlayerFactory.hpp
core/include/imgui/: implot.h
core/include/include/: AGame.hpp  Imgui.hpp  Systems.hpp  Tools.hpp
core/include/observer/: Observer.hpp  ObserverManager.hpp
core/include/parallax/: layerBackground.hpp
core/include/particle/: ParticleManager.hpp  ParticleSystem.hpp
core/include/scene/: SceneManager.hpp
core/include/sprite/: Sprite.hpp  SpriteManager.hpp  dynamicSprite.hpp
core/include/src/: EventSystem.hpp  config.hpp  types.hpp
core/include/system/: ASystem.hpp  BehaviorSystem.hpp  CollisionColor.hpp  CollisionDamage.hpp  CollisionSystem.hpp  DiesLeavesScreen.hpp  DisplayShape.hpp  EntityGenerator.hpp  FormSystem.hpp  GravitySystem.hpp  HealthSystem.hpp  KeyHandler.hpp  KeyMovement.hpp  MouseForceSystem.hpp  MovementSystem.hpp  OrbitSystem.hpp  ParticleMouseForceSystem.hpp  ParticleMousePosSystem.hpp  ParticleMouseTargetSystem.hpp  ParticleTimeLifeSystem.hpp  ParticlesSystem.hpp  PointParticleAlphaSystem.hpp  PointParticleBasicSystem.hpp  ResetSystem.hpp  SpriteSystem.hpp  SystemManager.hpp
core/include/texture/: Texture.hpp  TextureManager.hpp
core/include/tools/: Chrono.hpp  Spooky.hpp  tools.hpp
core/json/: README.md  SpriteSystem.json  backConfig.json  scene1.json
core/json/entity/: Block.json  Enemy.json  MachineGun.json  Missile.json  Player.json  Protector.json  SpaceShip.json
core/json/hud/: platform.json
core/json/particles/: Default.json  Particles.json  Rain.json
core/src/: AGame.hpp  EventSystem.cpp  EventSystem.hpp  Game.cpp  Game.hpp  Singleton.hpp  assert.hpp  main.cpp  main.hpp  types.hpp
core/src/Parallax/: AParallax.cpp  AParallax.hpp  IParallax.hpp  ParallaxLayer.cpp  ParallaxLayer.hpp  ParallaxManager.cpp  ParallaxManager.hpp  ParallaxObj.cpp  ParallaxObj.hpp  ParallaxSystem.cpp  ParallaxSystem.hpp  layerBackground.cpp  layerBackground.hpp
core/src/behavior/: Behavior.cpp
core/src/component/: Component.hpp  ComponentBase.hpp  ComponentManager.cpp  ComponentManager.hpp
core/src/components/: BehaviorComponent.cpp  Color.cpp  Damage.cpp  DiesLeavesScreen.cpp  Direction.cpp  DirectionSprite.cpp  EntitySpawner.cpp  ForceComponent.cpp  ForceComponent.hpp  GravityComponent.cpp  HaveCollisionDamage.cpp  HealthComponent.cpp  HealthComponent.hpp  KeyMovement.cpp  LifeTime.cpp  LinearMovement.cpp  LoopLife.cpp  MasseComponent.cpp  MasseComponent.hpp  MouseForce.cpp  Orbit.cpp  ParentRef.cpp  ParticleIdentityComponent.cpp  PosComponent.cpp  PosComponent.hpp  PresseSpaceMakeEntity.cpp  RectangleShape.cpp  Size.cpp  SolideBlock.cpp  SoundEvent.cpp  SpawnMousePos.cpp  SpawnPos.cpp  SpawnPosComponent.cpp  Speed.cpp  Sprite.cpp  TargetEntity.cpp
core/src/entity/: Entity.cpp
core/src/factory/: EntityFactory.cpp  ParticleFactory.cpp  PlayerFactory.cpp
core/src/observer/: EventType.hpp  IObserver.hpp  ISubject.hpp  Observer.hpp  ObserverManager.hpp  Subject.hpp
core/src/parallax/: AParallax.cpp  ParallaxLayer.cpp  ParallaxObj.cpp  ParallaxSystem.cpp  ParallaxSystem.hpp
core/src/particle/: ParticleManager.cpp  ParticleSystem.cpp  ParticleSystem.hpp
core/src/scene/: SceneManager.cpp  SceneManager.hpp
core/src/sprite/: Sprite.cpp  SpriteManager.cpp  dynamicSprite.cpp  dynamicSprite.hpp
core/src/system/: ASystem.hpp  BehaviorSystem.cpp  CollisionColor.cpp  CollisionDamage.cpp  CollisionSystem.cpp  DiesLeavesScreen.cpp  DisplayShape.cpp  EntityGenerator.cpp  FormSystem.cpp  GravitySystem.cpp  HealthSystem.cpp  HealthSystem.hpp  KeyHandler.cpp  KeyMovement.cpp  MovementSystem.cpp  OrbitSystem.cpp  ParticleMouseForceSystem.hpp  ParticleMousePosSystem.hpp  ParticleMouseTargetSystem.hpp  ParticleTimeLifeSystem.hpp  ParticlesSystem.cpp  PointParticleAlphaSystem.hpp  PointParticleBasicSystem.hpp  PointParticleGravitySystem.cpp  PointParticleGravitySystem.hpp  ResetSystem.cpp  SpriteSystem.cpp  SystemManager.hpp
core/src/texture/: Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
core/src/tools/: Chrono.cpp  jsonTools.cpp  jsonTools.hpp  random.cpp  random.hpp  tools.cpp
examples/test1/: CMakeLists.txt
examples/test1/src/: main.cpp
test/: CMakeLists.txt
test/json/: forceComp.json  forceCompBad.json
test/src/: ObserverTest.cpp  main.cpp
(+77 files in other folders)
